# react-genie-robotics

./: CMakeLists.txt  README.md
include/: Human.cpp  Human.h  Human2D.cpp  Human2D.h
mmp_panda/: controller.cpp  redis_keys.h  simviz.cpp  world_mmp_panda.urdf
model/mmp_panda/: mmp_panda.urdf
model/standard_type/meshes/collision/: battery_s.mtl  chuck_s_L.mtl  chuck_s_R.mtl  rack_s.mtl  x-body_s.mtl  x-slider_s.mtl  z-frame_s.mtl
model/standard_type/meshes/visual/: battery_s.mtl  battery_s_original.mtl  chuck_s_L.mtl  chuck_s_R.mtl  rack_s.mtl  x-body_s.mtl  x-slider_s.mtl  z-frame_s.mtl
optitrack/: CMakeLists.txt  panda_controller.cpp  panda_controller_basic.cpp  panda_controller_og.cpp  panda_controller_og2.cpp  redis_keys.h  save_history.py  simviz.cpp  simviz_bad.cpp  write_redis.py
optitrack/recordings/: circles.txt  jump.txt  realsense.txt  realsense2.txt
optitrack/streaming/: read_redis.py  save_history.py  write_redis.py
optitrack/world/: world_volley.urdf
